--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -64,6 +64,16 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-[#09090b] text-white;
   }
+}
+
+@font-face {
+  font-family: "Satoshi-Regular";
+  src: url("./fonts/Satoshi-Regular.otf");
+}
+
+@font-face {
+  font-family: "Satoshi-Black";
+  src: url("./fonts/Satoshi-Black.otf");
 }
